Fixed bug #26758 (FastCGI exits immediately with status 255).